# client_library

./: LICENSE  pyproject.toml  requirements.txt
src/client_library/: core.py
src/client_library.egg-info/: PKG-INFO  SOURCES.txt
src/my_awesome_library.egg-info/: PKG-INFO  SOURCES.txt
src/my_test_client_library_add_to_num.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
