[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-awesome-library"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A short description of my awesome library."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [  # Зависимости, которые автоматически установятся с библиотекой
    "requests>=2.25.1",
    "numpy>=1.20.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/my_awesome_library"
Bug-Tracker = "https://github.com/yourusername/my_awesome_library/issues"
