[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_test_client_library_add_to_num"
version = "0.1.0"
authors = [{ name = "Maxim", email = "imaks1464@gmail.com" }]
description = "A short description of client library."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [  # Зависимости, которые автоматически установятся с библиотекой
    "requests>=2.25.1",
    "numpy>=1.20.0"
]

[project.urls]
Homepage = "https://github.com/MIslit/client_library"
Bug-Tracker = "https://github.com/MIslit/client_library/issues"
